--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -74,4 +74,7 @@
   --ion-color-light-contrast-rgb: 0, 0, 0;
   --ion-color-light-shade: #d7d8da;
   --ion-color-light-tint: #f5f6f9;
+
+  $item-md-detail-push-show: true;
+  $item-wp-detail-push-show: true;
 }
