--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,14 +1,23 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar color="primary">
     <ion-title>
-      Ionic Blank
+      Listy
     </ion-title>
+    <ion-buttons slot="end">
+      <div [routerLink]="['/create-list']" ion-button>  
+        <ion-icon name="add" color="light"></ion-icon>
+      </div>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <div class="ion-padding">
-    The world is your oyster.
-    <p>If you get lost, the <a target="_blank" rel="noopener" href="https://ionicframework.com/docs/">docs</a> will be your guide.</p>
-  </div>
+  <ion-list>
+    <ion-list-header>
+      Items
+    </ion-list-header>
+    <ion-item *ngFor="let item of listItem | async"  [routerLink]="['/edit-list/' + item.name]" detail-push>
+      {{item.name}}
+    </ion-item>
+  </ion-list>
 </ion-content>
